# automatized_eigensolver

./: .gitignore  CMakeLists.txt  README.md
Eigensolver/plot/: plot_1D.py
Eigensolver/src/: eigensolver.cc
